--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,10 @@
 [API]
-username = abcd1234
-password = password
+Username = abcd1234
+Passwort = Passwort
 
 [Tutoren]
 AnzahlDerTutoren = 8
 TutoriumBuchstabe = A
+
+[Dateien]
+Speicherort = C:\Tutorium\
