--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,8 @@ Passwort = Passwort
 
 [Tutoren]
 AnzahlDerTutoren = 8
-TutoriumBuchstabe = A
+TutoriumBuchstabe = ADFIBJGC
+UseTutoriumBuchstabe = Nein
 
 [Dateien]
 Speicherort = C:\Tutorium\
