--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@ Username = abcd1234
 Passwort = Passwort
 
 [Tutoren]
-AnzahlDerTutoren = 7
-TutoriumBuchstabe = ADFIBJG
+AnzahlDerTutoren = 8
+TutoriumBuchstabe = ADFIBJGC
 UseTutoriumBuchstabe = Nein
 
 [Dateien]
